# BPR-Math-Spine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGI_GENESIS_IMPLEMENTATION_PLAN.md  Dockerfile  GENESIS_TO_AGI_ROADMAP.md  LICENSE  README.md  VALIDATION_STATUS.md  conftest.py  docker-compose.yml  environment-docker.yml  environment-fenicsx.yml  environment-minimal.yml  environment.yml  pyproject.toml  pytest.ini  requirements-docker.txt
analysis/: analyze.py  corridor_map.py  corridor_plots.py  gut_audit.py  independence_audit.py  independence_plots.py  memo.md  memo_corridor.md  memo_derivation_audit.md  memo_gut_audit.md  memo_independence.md  memo_solution_space.md  memo_third_observable.md  solution_space.py  solution_space_plots.py  summary.txt  sweep.py
api/: main.py  run.sh
bpr/: __init__.py  alpha_derivation.py  atomic_precision.py  b_meson_fcnc.py  bioelectric.py  black_hole.py  born_microstates.py  born_rule.py  bounce_cosmology.py  boundary_action.py  boundary_field.py  boundary_topology.py  buga_alloy_forensics.py  casimir.py  casimir_constraint.py  casimir_epsilon_toy.py  charged_leptons.py  cli.py  clifford_bpr.py  coherence_transitions.py  collective.py  complexity.py  condensed_matter_predictions.py  conscious_agents.py  consistency.py  constants.py  cosmology.py  cross_predictions.py  cs_completion.py  decoherence.py  electromechanical.py  emergence.py  emergent_spacetime.py  emergent_speculations.py  eml.py  eml_regression.py  energy_balance.py  eschatology.py  experimental_data.py  fcnc_gauge_mass.py  (+50 more)
data/: imp_mnist.csv  imp_mnist_ri.csv  imp_mnist_rm.csv  imp_mnist_wt.csv  lottery_ticket_results.md  mathematical_checkpoints.txt
doc/: BENCHMARK_SCORECARD.md  BPR_Complete_Framework.md  BPR_Complete_Framework_OUTLINE.md  BPR_FLAVOR_SECTOR.md  BPR_MAINSTREAM_MAPPING.md  BPR_clifford_embedding.tex  (+47 more)
(+441 files in other folders)
